Revert "Fixed Checkstyle errors in ImageLab.java"