@@ -48,7 +48,7 @@ public class ImageLab {
     private static List<ImageFilter> filters;
 
     /** The current image provider. */
-    private static ImgProvider impro;
+    public static ImgProvider impro;
 
     /** A copy of <CODE>this</CODE>. */
     private static ImageLab theLab;
@@ -188,8 +188,7 @@ public class ImageLab {
                             "imagelab.ImageFilter");
                     } //for ja
                     if (isFilter) {
-                        ifilter = (ImageFilter) cl.getDeclaredConstructor()
-                            .newInstance();
+                        ifilter = (ImageFilter) cl.getDeclaredConstructor().newInstance();
                         filters.add(ifilter);
                         JMenuItem jmi = new JMenuItem(ifilter.getMenuLabel());
                         filter.add(jmi);
@@ -264,8 +263,7 @@ public class ImageLab {
         return new ActionListener() {
             public void actionPerformed(final ActionEvent ev) {
                 if (impro == null) {
-                    JOptionPane.showMessageDialog(
-                        myframe, "You must first select an image");
+                    JOptionPane.showMessageDialog(myframe, "You must first select an image");
                     return;
                 }
                 //System.out.println("Using impro number " + impro.getid());
@@ -334,8 +332,7 @@ public class ImageLab {
                 //The imgProvider holding the image
                 ImgProvider improvider = impro;
                 if (improvider == null) {
-                    JOptionPane.showMessageDialog(
-                        myframe, "First select the image to play");
+                    JOptionPane.showMessageDialog(myframe, "First select the image to play");
                     return;
                 } //if
                 improvider.play();
@@ -354,8 +351,7 @@ public class ImageLab {
             public void actionPerformed(final ActionEvent e) {
                 ImgProvider improvider = impro; // Hold the image.
                 if (improvider == null) {
-                    JOptionPane.showMessageDialog(
-                        myframe, "Select the image to save");
+                    JOptionPane.showMessageDialog(myframe, "Select the image to save");
                     return;
                 } //if
                 improvider.save();
